--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -110,7 +110,7 @@
                         
                         <li class="nav-item">
                             <a class="nav-link" href="/business/{{ request.tenant.slug }}/settings/services/">
-                                <i class="nav-icon fas fa-car-wash"></i>
+                                <i class="nav-icon fas fa-tools"></i>
                                 <span class="nav-text">Service Settings</span>
                             </a>
                         </li>
