--- a/templates/includes/sidebar/modules/customers.html
+++ b/templates/includes/sidebar/modules/customers.html
@@ -1,4 +1,4 @@
-<!-- includes/sidebar/modules/customers.html -->
+<!-- Customers Module -->
 <li class="nav-item nav-dropdown" id="customers-dropdown">
     <a class="nav-link nav-dropdown-toggle {% if 'customers' in request.resolver_match.namespace %}active{% endif %}" 
        href="#" onclick="toggleDropdown('customers-dropdown')">
@@ -17,7 +17,7 @@
         {% if user_role in 'owner,manager,supervisor' %}
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'create' and 'customers' in request.resolver_match.namespace %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/services/quick/customer-register/">
+               href="/business/{{ request.tenant.slug }}/customers/create/">
                 <i class="nav-icon fas fa-user-plus"></i>
                 <span class="nav-text">Add Customer</span>
             </a>
@@ -40,22 +40,20 @@
         </li>
         {% endif %}
         
-        <!-- Quick Search for All Users -->
+        <!-- Quick Actions for All Users -->
         <li class="nav-divider">
             <span class="nav-divider-text">Quick Actions</span>
         </li>
-        <!-- Navigate to quick Customer Create-->
+        
         <li class="nav-item">
-            <a class="nav-link nav-link-action {% if request.resolver_match.url_name == 'quick_customer_search' %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/services/quick/customer-register/">
+            <a class="nav-link nav-link-featured" href="#" onclick="openCustomerSearch()">
                 <i class="nav-icon fas fa-search"></i>
-                <span class="nav-text">Quick Search</span>
+                <span class="nav-text">Find Customer</span>
             </a>
         </li>
-
-           
+        
         <li class="nav-item">
-            <a class="nav-link nav-link-action" href="#">
+            <a class="nav-link nav-link-action" href="#" onclick="openVehicleSearch()">
                 <i class="nav-icon fas fa-car"></i>
                 <span class="nav-text">Find Vehicle</span>
             </a>
