--- a/templates/includes/sidebar/modules/payments.html
+++ b/templates/includes/sidebar/modules/payments.html
@@ -1,4 +1,4 @@
-<!-- includes/sidebar/modules/payments.html -->
+<!-- Payments Module -->
 <li class="nav-item nav-dropdown" id="payments-dropdown">
     <a class="nav-link nav-dropdown-toggle {% if 'payments' in request.resolver_match.namespace %}active{% endif %}" 
        href="#" onclick="toggleDropdown('payments-dropdown')">
@@ -7,7 +7,7 @@
     </a>
     <ul class="nav-submenu">
         <!-- Dashboard and Quick Actions -->
-         {% if user_role in 'owner,manager,supervisor' %}
+        {% if user_role in 'owner,manager,supervisor' %}
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/payments/">
@@ -23,6 +23,7 @@
                 <span class="nav-text">All Payments</span>
             </a>
         </li>
+        {% endif %}
         
         <li class="nav-item">
             <a class="nav-link nav-link-featured {% if request.resolver_match.url_name == 'create' and 'payments' in request.resolver_match.namespace %}active{% endif %}" 
@@ -32,8 +33,25 @@
                 <span class="nav-badge nav-badge-primary">QUICK</span>
             </a>
         </li>
-        {% endif %}
         
+        <!-- Quick Actions -->
+        <li class="nav-divider">
+            <span class="nav-divider-text">Quick Actions</span>
+        </li>
+        
+        <li class="nav-item">
+            <a class="nav-link nav-link-action" href="#" onclick="openPaymentQuickProcess()">
+                <i class="nav-icon fas fa-cash-register"></i>
+                <span class="nav-text">Quick Payment</span>
+            </a>
+        </li>
+        
+        <li class="nav-item">
+            <a class="nav-link" href="#" onclick="openReceiptPrint()">
+                <i class="nav-icon fas fa-print"></i>
+                <span class="nav-text">Print Receipt</span>
+            </a>
+        </li>
         
         <!-- Management Features -->
         {% if user_role in 'owner,manager,supervisor' %}
