--- a/templates/includes/sidebar/modules/inventory.html
+++ b/templates/includes/sidebar/modules/inventory.html
@@ -13,6 +13,7 @@
                 <span class="nav-text">Dashboard</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'list' and 'inventory' in request.resolver_match.namespace %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/items/">
@@ -20,6 +21,7 @@
                 <span class="nav-text">All Items</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'item_create' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/items/create/">
@@ -27,6 +29,7 @@
                 <span class="nav-text">Add Item</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'stock_adjustment' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/stock/adjustments/">
@@ -34,6 +37,7 @@
                 <span class="nav-text">Stock Adjustments</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'stock_take_list' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/stock-takes/">
@@ -41,6 +45,7 @@
                 <span class="nav-text">Stock Takes</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'category_list' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/categories/">
@@ -48,6 +53,11 @@
                 <span class="nav-text">Categories</span>
             </a>
         </li>
+        
+        <li class="nav-divider">
+            <span class="nav-divider-text">Reports</span>
+        </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'low_stock_report' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/reports/low-stock/">
@@ -55,6 +65,7 @@
                 <span class="nav-text">Low Stock Alert</span>
             </a>
         </li>
+        
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'valuation_report' %}active{% endif %}" 
                href="/business/{{ request.tenant.slug }}/inventory/reports/valuation/">
